@@ -1,7 +1,9 @@
-Changelog for Hoogle
+Changelog for Hoogle (* = breaking change)
 
+*   #285, remove accidental API break in 5.0.17.4
     Lots of improvements in type search
 5.0.17.4, released 2018-12-10
+*   #285, change targetPackage/Module to be opaque
     Require haskell-src-exts-1.21
     #271, added FromJSON instance for Target
     #253, adds JSON pagination from query parameters
